keyboard_setting.txt
# GUIを使ったキーボードレイアウト変更
(Linux)
手順１：US配列をJP配列に変更する（ubuntu18.04では Fcitx + Mozcをインストールする事で解決した）
参考サイトhttps://kledgeb.blogspot.com/2018/04/ubuntu-unity-1804-13-fcitx-mozc.html

手順２：GNOMEを使うとGUIでキーボードでcapslockをctrlに変更・入力ソースの切り替えをカスタマイズできる。GNOME Teakアプリケーションをubuntuソフトウェアからダウンロードして、キーボード > 追加のレイアウトから変更する。

手順３：窓使いの憂鬱で，更にカスタマイズ．設定ファイルは，.mayuに記載．
this site(https://symfoware.blog.fc2.com/blog-entry-2150.html) is useful to install on ubuntu18.04

* configureを実行
sudo ./configure --with-boost-libdir=/usr/lib/x86_64-linux-gnu/

* makeを実行（automakeを事前にapt-getでinstallしておく）
※If the following error occur, you have to rewrite source code

```(Error)
vkeytable.cpp:343:1: error: narrowing conversion of ‘-1’ from ‘int’ to ‘u_int8 {aka unsigned char}’ inside { } [-Wnarrowing]
};
^
```

```(modified)
- #define VK(name) { -1, _T(#name) }
+ #define VK(name) { (u_int8)-1, _T(#name) }
```
* make installを実行
* you will enable service using "systmctl" command

(Mac)


(windows)
key change等の窓の社から出ているものを利用する。

# コマンド使ったレイアウト確(但し挙動がうまく行かない場合もあるので参考にならないかも(
To confirm current layout, you can use the following command,
`localectl status`

To set jp106 keymap, 
`localectl set-keymap jp106`

The place of setting file is  "/etc/vconsole.conf"

